# Brainrot-Translator-Chatbot-Minihack-Project

./: .gitmodules  Brainrot-terms-and-translations-database.csv  CMakeLists.txt  README.md  index.html  main  main.cpp  out  package-lock.json  package.json  script.js  server.js  test.js
